Fix 'Opening balance account is untranslated'.

Using i18n for assigning a static variable does not work; therefore
OpeningBalancesPrefix has been refactored into a static class method
which is called on demand.

BUG:370291
FIXED-IN:4.8.1